--- a/.github/workflows/cleanup.yaml
+++ b/.github/workflows/cleanup.yaml
@@ -12,7 +12,7 @@ jobs:
       - name: Install and configure the Koyeb CLI
         uses: koyeb-community/install-koyeb-cli@v2
         with:
-          api_token: "${{ secrets.KOYEB_EXAMPLES_APPS_TOKEN }}"
+          api_token: '${{ secrets.KOYEB_EXAMPLES_APPS_TOKEN }}'
 
       - name: Cleanup Koyeb application
         uses: koyeb/action-git-deploy/cleanup@v1
