--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@prisma/client": "^5.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express-basic-auth": "^1.2.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
